--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,10 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Entrepreneurial governance - Quito, Ecuador"
 collection: talks
-type: "Tutorial"
-permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+type: "AAG Conference 2022"
+permalink: /talks/2012-03-01-talk-1
+venue: "AAG"
+date: 2022-02-20
+location: "Denver, Colorado (virtual)"
 ---
-
-[More information here](http://exampleurl.com)
-
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Abstract: Urban land policies define a city's past and influence its present and future. In this regard, one of the main challenges of cities is to put aside real estate developers' speculation on policymaking. This research analyzes the agenda, decision-making, and implementation of urban land policies in the Metropolitan District of Quito, Ecuador in a multi-temporal study of three municipal administrations from 2004 to 2019. The analysis is embedded in the debates of urban and economic geography and the anthropology of capitalism, with a theoretical discussion that contains urban entrepreneurism, urban speculation, land rents, and uneven geographic development. The article initially outlines the history of land use policies, the impact on the socio-spatial configuration, and addresses the power of elites on policy approval. Second, I discuss the current decision-making process, paying special attention to real estate developers actions, not only as individuals but also as an organization. Hence, I explore the role of the organization Constructores Positivos in different local government institutions. Third, I analyze the flexibilization of the norms applying in-depth interviews with public servants, documentary review, and a geospatial analysis that links changes in land uses with land prices. The main results demonstrate how local government politics and real estate lobbying are influencing policymaking. This research uses an empirical and theoretical approach to critique the power of urban entrepreneurism in the socio-spatial configuration of the city.
