--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,4 +8,8 @@ date: 2023-03-22
 location: "Denver, Colorado"
 ---
 
+[More information here](https://www.aag.org/events/aag2023/)
+
+---
+
 Abstract: In urban and economic geography, real estate and finance have frequently been looked like a black box. Hence, recent studies and scholars are trying to demystify real estate financialization in a readily comprehensive way. This paper explores two aspects: how financial-political instruments operate and how to approach the data behind those instruments. The project includes financial-political instruments linked to Real Estate Investment Trusts (REITs). Firstly, the paper addresses the idea of modernity and urban planning in the context of policy production and contextualizes real estate in finance using three cases: Brazil, Chile, and Mexico. Understanding how these political instruments emerge in each country highlights not only the similarities but also the differences in the financialization process. After the exploratory explanation of these instruments, the article delves deeper into how trust and securitization operate. In this section, I used documentary reviews and interviews to understand how they work, what kind of data they produce, who is involved, and how this can be mapped in urban scenarios
