--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,7 +8,7 @@ date: 2023-03-22
 location: "Denver, Colorado"
 ---
 
-[More information here](https://www.aag.org/events/aag2023/)
+[AAG Event - Check More](https://www.aag.org/events/aag2023/)
 
 ---
 
